# proman

./: .gitignore  Pipfile  list_repos_to_files.py  main.py  pyproject.toml  tui_repos.py
daten/: nvim.csv
output/: franzbrandtwein__Infopanel.md  franzbrandtwein__curses-menu.md  franzbrandtwein__growbot.md  franzbrandtwein__ha_thermostat.md  franzbrandtwein__homeassistant_core.md  franzbrandtwein__immoDB.md  franzbrandtwein__proman.md  franzbrandtwein__pyman.md  franzbrandtwein__python_userspace_installer.md  franzbrandtwein__rewe_daten_auswertung.md  franzbrandtwein__serien.to.md  franzbrandtwein__video-stabilization.md  repos.json  thoughtram__angularjs-master-class-exercises.md  thoughtram__angularjs-master-class-slides.md  thoughtram__angularjs-master-class-solutions.md
proman/: __init__.py  csv_data.py  list_repos_to_files.py  neovim_cli.py  neovim_commander.py  neovim_installierer.py  nvim_plugins.py  tui_repos.py
proman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pyman/: main.py  pyproject.toml
tools/: install_uv.sh  run_proman.sh
