[project]
name = "proman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygithub>=2.8.1",
    "pynvim>=0.6.0",
]

[project.scripts]
proman = "proman:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["proman*"]

[dependency-groups]
dev = [
    "ptpython>=3.0.32",
]
